# no_tipping

./: .gitignore  CMakeLists.txt  Contestant.java  LibNtgJni.h  LibNtgJni.java  Makefile  NoTippingPlayer.java  README  adversarial_utils.h  alphabetapruning.h  brute_force_ntg.cpp  combination.cpp  combination.h  compile  contestant.cpp  contestant_gtest.cpp  contestant_util.cpp  contestant_util.h  contestant_util_gtest.h  game_gtest.h  input  input2  input3  input4  input5  input6  input7  libntgjni.cpp  libntgjni_gtest.h  main.cpp  minimax.h  minimax_gtest.h  no_tipping_game.h  ntg.cpp  ntg.h  ntg_gtest.cpp  ntg_gtest.h  ntg_gtest_operators.h  ntg_gtest_utils.h  ntg_players.h  (+2 more)
ntgContestantJniTest/: LibNtgJni.h  LibNtgJni.java  LibNtgJni.java~  libntgjni.cpp
